# Veneficus-projects

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_etl.yml
notebooks/: process_data_1.ipynb  process_data_2.ipynb  sharepoint_client.ipynb  tryout.ipynb
src/performance_dashboard/: utils.py
src/performance_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/performance_dashboard/dashboards/: app.py
src/performance_dashboard/data/processed/: Werknemers_gegevens - Test.xlsx  dummy_data.xlsx  employee_name.xlsx
src/performance_dashboard/data/raw/Opdrachtgever_Feedback/: opdrachtgever_1.parquet  opdrachtgever_2.parquet  opdrachtgever_3.parquet
src/performance_dashboard/data/raw/Peer_feedback/: peer_1.parquet  peer_2.parquet  peer_3.parquet
src/performance_dashboard/services/: create_and_upload_combined_df.py  process_data.py  sharepoint_client.py
tests/: test_app.py
