[project]
name = "performance_dashboard"
version = "0.1.0"
description = "Performance dashboard"
readme = "README.md"
requires-python = ">=3.11,<3.13"


dependencies = [
    "streamlit>=1.53,<2.0",
    "altair>=5,<6",
    "pandas>=2.0,<3.0",
    "numpy>=2.0,<3.0",
    "plotly>=6.0",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "office365-rest-python-client>=2.5.0",
    "ipykernel>=7.1.0",
    "msal>=1.34.0",
    "requests>=2.32.5",
]


[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

